# tokyo-sticker-db

./: .gitignore  README.md  STATIC_EXPORT.md  debug_sam3.py  export_static.py  pyproject.toml  start.sh
backend/: cleanup.py  clustering.py  embeddings.py  main.py  pyproject.toml  segmentation.py  state.py  worker.py
docs/: index.html
docs/assets/: index-55CUnxPz.js  index-B29t-nDd.js  index-B42BYu8c.css  index-BCQkRxty.css  index-BE3wb14G.css  index-BEFWFskw.js  index-BF9Q6dpO.js  index-BFPeXxhD.js  index-BL3zqnmh.js  index-BLSZwNh6.css  index-BRxh4Gzl.js  index-Bb0PjqlF.css  index-Buijofgt.js  index-BzT-PpD9.css  index-C09TDYzg.css  index-C1SNiDOi.css  index-C49Vfayx.css  index-C8Of3no1.css  index-CU0oDMd0.js  index-CWJLuQtO.js  index-CdNFIsch.js  index-CfG_y4se.js  index-ClQEe57E.css  index-CoP1z1Ls.css  index-CuWwssWN.js  index-Cz6AvRHy.js  index-D62uy15v.js  index-DFZlEtx-.css  index-DKF0uYfe.js  index-DQdGAB2W.js  index-DRevET2I.js  index-DVeE2ZR-.js  index-DXD8WYjx.css  index-Dd6PQoF-.js  index-DeofwDmk.js  index-DhuCG5dU.js  index-DkIcjaMB.js  index-DnpS581d.css  index-DsEAPMuZ.js  index-Nx9_RQcC.js  (+4 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.static.ts
frontend/src/: App.tsx  index.css  store.ts  utils.ts
frontend/src/components/: DropZone.tsx  EmbeddingMap.tsx  Gallery.tsx  GlobalGallery.tsx  GroupedGallery.tsx  ImageViewer.tsx  PhysicsCanvas.tsx  StickerCanvas.tsx  StickerModal.tsx
